force-app/force-app/main/default/objects/Contact/fields/AI_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>AI_Action_Items__c</fullName>
    <description>AI Action Items - Extracted action items</description>
    <label>AI Action Items</label>
    <type>Text</type>
    <length>5000</length>
</CustomField>