force-app/force-app/main/default/objects/Contact/fields/AI_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Call_Summary__c</fullName>
    <description>AI Call Summary - AI-generated summary</description>
    <label>AI Call Summary</label>
    <type>Text</type>
    <length>5000</length>
</CustomField>