force-app/force-app/main/default/objects/Contact/fields/AI_Key_Topics__c.field-meta.xml
<CustomField>
    <fullName>AI_Key_Topics__c</fullName>
    <description>AI Key Topics - Main discussion points</description>
    <label>AI Key Topics</label>
    <type>Text</type>
    <length>3000</length>
</CustomField>