force-app/force-app/main/default/objects/Contact/fields/Email_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Click_Count__c</fullName>
    <description>Email Click Count - Total email clicks</description>
    <label>Email Click Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>