force-app/force-app/main/default/objects/Contact/fields/Email_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Open_Count__c</fullName>
    <description>Email Open Count - Total email opens</description>
    <label>Email Open Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>