force-app/force-app/main/default/objects/Contact/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <description>Last Call Date - RingCentral integration</description>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>