force-app/force-app/main/default/objects/Contact/fields/Last_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Duration__c</fullName>
    <description>Last Call Duration - Seconds</description>
    <label>Last Call Duration</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>