force-app/force-app/main/default/objects/Contact/fields/Last_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Outcome__c</fullName>
    <description>Last Call Outcome - Result of call</description>
    <label>Last Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call_Outcome_GVS</fullName>
                <default>true</default>
                <label>Call_Outcome_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>