force-app/force-app/main/default/objects/Contact/fields/Last_Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Recording_URL__c</fullName>
    <description>Last Call Recording URL - Direct link to recording</description>
    <label>Last Call Recording URL</label>
    <type>Url</type>
</CustomField>