force-app/force-app/main/default/objects/Contact/fields/Last_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Type__c</fullName>
    <description>Last Call Type - Call direction</description>
    <label>Last Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>