force-app/force-app/main/default/objects/Contact/fields/Last_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Date__c</fullName>
    <description>Last Email Date - Marketing automation</description>
    <label>Last Email Date</label>
    <type>DateTime</type>
</CustomField>