force-app/force-app/main/default/objects/Contact/fields/Last_SMS_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Date__c</fullName>
    <description>Last SMS Date - RingCentral integration</description>
    <label>Last SMS Date</label>
    <type>DateTime</type>
</CustomField>