force-app/force-app/main/default/objects/Contact/fields/Last_Transcript_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transcript_Date__c</fullName>
    <description>Last Transcript Date - Fireflies integration</description>
    <label>Last Transcript Date</label>
    <type>DateTime</type>
</CustomField>