force-app/force-app/main/default/objects/Contact/fields/Last_Transcript_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Transcript_URL__c</fullName>
    <description>Last Transcript URL - Link to Fireflies</description>
    <label>Last Transcript URL</label>
    <type>Url</type>
</CustomField>