force-app/force-app/main/default/objects/Contact/fields/Owner_DL_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_DL_Number__c</fullName>
    <description>Owner DL Number - Driver license for KYC</description>
    <label>Owner DL Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>