force-app/force-app/main/default/objects/Contact/fields/Owner_DL_State__c.field-meta.xml
<CustomField>
    <fullName>Owner_DL_State__c</fullName>
    <description>Owner DL State - License issuing state</description>
    <label>Owner DL State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US_States_GVS</fullName>
                <default>true</default>
                <label>US_States_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>