force-app/force-app/main/default/objects/Contact/fields/Owner_DOB__c.field-meta.xml
<CustomField>
    <fullName>Owner_DOB__c</fullName>
    <description>Owner Date of Birth - Sertifi #6; Collected post-qualification</description>
    <label>Owner Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>