force-app/force-app/main/default/objects/Contact/fields/Owner_SSN__c.field-meta.xml
<CustomField>
    <fullName>Owner_SSN__c</fullName>
    <description>Owner SSN - Sertifi #5; Collected post-qualification; Requires Shield</description>
    <label>Owner SSN</label>
    <required>true</required>
    <type>Text</type>
    <length>11</length>
</CustomField>