force-app/force-app/main/default/objects/Contact/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>Ownership Percentage - % ownership in business</description>
    <label>Ownership Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>