force-app/force-app/main/default/objects/Contact/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <description>Portal User - Community user for portal access</description>
    <label>Portal User</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>user</referenceTo>
    <relationshipName>PortalUser</relationshipName>
</CustomField>