force-app/force-app/main/default/objects/Contact/fields/Preferred_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Call_Time__c</fullName>
    <description>Preferred Call Time - Best time to reach</description>
    <label>Preferred Call Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <default>true</default>
                <label>Morning</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Anytime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>