force-app/force-app/main/default/objects/Contact/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Preferred Contact Method - Mirror from Lead</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred_Contact_Method_GVS</fullName>
                <default>true</default>
                <label>Preferred_Contact_Method_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>