force-app/force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone - Contact timezone</description>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timezone_GVS</fullName>
                <default>true</default>
                <label>Timezone_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>