force-app/force-app/main/default/objects/Contact/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <description>Total Calls - Rollup counter</description>
    <label>Total Calls</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>