force-app/force-app/main/default/objects/Contact/fields/Total_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_SMS_Sent__c</fullName>
    <description>Total SMS Sent - Rollup counter</description>
    <label>Total SMS Sent</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>