force-app/force-app/main/default/objects/Contact/fields/Total_Transcripts__c.field-meta.xml
<CustomField>
    <fullName>Total_Transcripts__c</fullName>
    <description>Total Transcripts - Count of transcribed calls</description>
    <label>Total Transcripts</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>